# Agentic-Router

./: .env.sample  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
agentic_router/: __init__.py  agents_config.yaml  config.py  graph.py  types.py
agentic_router/nodes/: __init__.py  classify.py  discover.py  format.py  forward.py
router_app/: graph.py  types.py
router_app/nodes/: a2a_send.py  classify.py  format.py  resolve_agent.py
router_app/services/: a2a_client.py  config.py  discovery.py  logging.py
src/: config.py  graph.py  types.py
src/agentic_router/: __init__.py  agents_config.yaml  agents_config.yaml.example  graph.py  types.py
src/agentic_router/nodes/: classify.py  discover.py  format.py  forward.py  utils.py
src/nodes/: __init__.py  forward.py
tests/: test_utils.py
